syntax = "proto3";

package order.v1;

option go_package = "github.com/test/api/gen/proto/v1;orderv1";

service OrderService {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse);
  rpc Get(GetOrderRequest) returns (GetOrderResponse);
  rpc List(ListOrderRequest) returns (ListOrderResponse);
  rpc Update(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc Delete(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message Order {
  string id = 1;
  string name = 2;
}

message CreateOrderRequest {
  string name = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrderRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message ListOrderResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string name = 2;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {}
